[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Skins/Fish/fish_character.png" type="Texture" id=1]
[ext_resource path="res://UI/PlayerJoin/PlayerJoinPanel.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme/small_button_stylebox_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/Theme/small_button_stylebox_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://UI/Theme/small_button_stylebox_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/Theme/ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://Player/Skins/AlpacaSkinData.tres" type="Resource" id=7]
[ext_resource path="res://UI/PlayerJoin/SkinButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Skins/FishSkinData.tres" type="Resource" id=9]

[sub_resource type="ButtonGroup" id=1]

[node name="Panel" type="Panel"]
margin_right = 136.0
margin_bottom = 176.0
rect_min_size = Vector2( 136, 152 )
size_flags_horizontal = 2
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressKey" type="Label" parent="."]
margin_left = 16.0
margin_top = 144.0
margin_right = 123.0
margin_bottom = 163.0
text = "Press key to join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPreview" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 96.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
margin_left = 8.0
margin_top = 104.0
margin_right = 128.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveBtn" type="Button" parent="."]
margin_left = 8.0
margin_top = 136.0
margin_right = 40.0
margin_bottom = 168.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skins" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 16.0
margin_right = 116.0
margin_bottom = 96.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlpacaButton" parent="Skins" instance=ExtResource( 8 )]
margin_right = 36.0
margin_bottom = 35.0
size_flags_vertical = 3
group = SubResource( 1 )
skin_data = ExtResource( 7 )

[node name="SkinButton" parent="Skins" instance=ExtResource( 8 )]
margin_top = 45.0
margin_right = 36.0
margin_bottom = 80.0
size_flags_vertical = 3
group = SubResource( 1 )
skin_data = ExtResource( 9 )

[connection signal="pressed" from="RemoveBtn" to="." method="_on_RemoveBtn_pressed"]
